[B]Version 2.1.1[/B]
- repo check
- import simpeljson
- limit page to load from addon settings
[B]Version 2.1.0[/B]
-Major site Change
[B]Version 1.0.4[/B]
-added search support
[B]Version 1.0.3[/B]
-faster loading 
-bug fixes.
[B]Version 1.0.1[/B]
-two more hebrew menus

[B]Version 1.0.0[/B]
- Initial release